feat(condo): DOMA-10771 play audio on new message

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1426,26 +1426,27 @@
   "news.filed.shareNews.button": "Enviar noticias",
   "news.initialOrganizationNewsItem.body": "¡El administrador [NOMBRE DE COMPAÑÍA] le da la bienvenida a la aplicación Doma!\nTrabajamos cada día para hacer más cómoda la convivencia en su comunidad. Estamos siempre a su disposición para responder a sus preguntas sobre el mantenimiento del edificio y proporcionar un informe detallado sobre el trabajo del administrador.\n\nCómo ponerse en contacto con nosotros:\n1. 1. Reporta nueva incidencia a través de la aplicación móvil: puede hacerlo en la sección ¨Incidencias¨.\n2. Llama al número del servicio de emergencias: +34 XXX XXX XXX, disponible 24/7.\n3. Llame a la oficina: +34 XXX XXX XXX, abierto [HORAS DE TRABAJO].\n4. Visite la oficina: [DIRECCIÓN Y HORAS DE TRABAJO].\n\nEn la aplicación, le enviaremos noticias importantes. Gracias por elegirnos ❤️",
   "news.initialOrganizationNewsItem.title": "Mensaje de su administrador de comunidad 📩",
-  "news.template.category.cleaning": "\uD83E\uDDF9 Limpieza",
-  "news.template.category.electricity": "\uD83D\uDCA1 Electricidad",
-  "news.template.category.electricityAndElevators": "\uD83D\uDCA1 Electricidad y ascensores",
-  "news.template.category.elevators": "\uD83D\uDED7 Ascensor",
-  "news.template.category.gas": "♨\uFE0F  Gas",
-  "news.template.category.heating": "\uD83C\uDF21\uFE0F Calefacción",
-  "news.template.category.intercom": "\uD83D\uDD22 Interfono",
-  "news.template.category.meters": "⏱\uFE0F Contadores",
-  "news.template.category.other": "\uD83C\uDFE0 Otros",
-  "news.template.category.snow": "❄\uFE0F Nieve",
-  "news.template.category.telephone": "\uD83D\uDCDE Teléfono",
-  "news.template.category.utilities": "\uD83D\uDCA1 Todos servicios",
-  "news.template.category.water": "\uD83D\uDCA7 Agua",
-  "news.template.category.fireProtection": "\uD83D\uDC68\uD83C\uDFFB protección contra incendios",
+  "news.template.category.cleaning": "🧹 Limpieza",
+  "news.template.category.electricity": "💡 Electricidad",
+  "news.template.category.electricityAndElevators": "💡 Electricidad y ascensores",
+  "news.template.category.elevators": "🛗 Ascensor",
+  "news.template.category.fireProtection": "👨🏻 protección contra incendios",
+  "news.template.category.gas": "♨️  Gas",
+  "news.template.category.heating": "🌡️ Calefacción",
+  "news.template.category.intercom": "🔢 Interfono",
+  "news.template.category.meters": "⏱️ Contadores",
+  "news.template.category.other": "🏠 Otros",
+  "news.template.category.snow": "❄️ Nieve",
+  "news.template.category.telephone": "📞 Teléfono",
+  "news.template.category.utilities": "💡 Todos servicios",
+  "news.template.category.water": "💧 Agua",
   "news.type.common": "Planificado",
   "news.type.emergency": "Incidencia",
   "news.update.title": "Editar noticia",
   "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "Nuevo pase de entrada",
   "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "Nuevo comentario de ticket",
   "notification.UserMessagesList.message.TICKET_CREATED.label": "Nuevo ticket",
+  "notification.UserMessagesList.newMessagePageTitle": "Nueva notificación",
   "notification.UserMessagesList.title": "Notificaciones",
   "notification.UserMessagesList.viewed": "Visto",
   "notification.UserMessagesSettingModal.messageType.PASS_TICKET_CREATED.label": "Sobre nuevos pases de acceso",
