--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1443,6 +1443,7 @@
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.update.title": "Edit news",
+  "notification.UserMessagesList.emptyList": "No notifications yet",
   "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "New pass ticket",
   "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "New ticket comment",
   "notification.UserMessagesList.message.TICKET_CREATED.label": "New ticket",
