--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1443,6 +1443,7 @@
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.update.title": "Редактировать новость",
+  "notification.UserMessagesList.emptyList": "Пока уведомлений нет",
   "notification.UserMessagesList.message.PASS_TICKET_CREATED.label": "Оформлен пропуск",
   "notification.UserMessagesList.message.TICKET_COMMENT_CREATED.label": "Новый комментарий",
   "notification.UserMessagesList.message.TICKET_CREATED.label": "Новая заявка",
