--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1770,7 +1770,8 @@
   "pages.condo.error.NotFoundTitle": "Page not found",
   "pages.condo.error.PageTitle": "Improving service",
   "pages.condo.error.TooManyRequestsTitle": "Too many requests",
-  "pages.condo.error.TooManyRequestsDescription": "You have sent too many requests in short period. Please wait — access will be restored automatically soon. If you need assistance, contact our support team",
+  "pages.condo.error.TooManyRequestsDescription": "You have sent too many requests in short period. Please wait — access will be restored automatically soon. If you need assistance, contact our support team.",
+  "pages.condo.error.resetTime": "Please try logging in again at {resetTime}",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Can't detect payment link type. Maybe link was corrupted or copied partially.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Unknown payment link",
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
