--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1769,6 +1769,9 @@
   "pages.condo.error.NotFoundDescription": "La página ha sido eliminada o nunca ha existido",
   "pages.condo.error.NotFoundTitle": "Página no encontrada",
   "pages.condo.error.PageTitle": "Mejorando servicio",
+  "pages.condo.error.TooManyRequestsTitle": "Tu mani regaña",
+  "pages.condo.error.TooManyRequestsDescription": "Tienes muchas solicitudes en un corto periodo de tiempo. Por favor Blanco - El acceso se restaurará automáticamente pronto. Si necesita ayuda, comuníquese con nuestro equipo de soporte.",
+  "pages.condo.error.resetTime": "Por favor, inicie sesión nuevamente en {resetTime}",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "No ha sido posible determinar el tipo de enlace. Quizás el enlace es incorrecto o no se ha copiado completamente.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Enlace de pago desconocido",
   "pages.condo.marketplace.bankAccountErrorMessage": "Error en el número de cuenta corriente",
