--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1770,7 +1770,8 @@
   "pages.condo.error.NotFoundTitle": "Страница не найдена",
   "pages.condo.error.PageTitle": "Улучшаем сервис",
   "pages.condo.error.TooManyRequestsTitle": "Слишком много запросов",
-  "pages.condo.error.TooManyRequestsDescription": "Вы отправили очень много запросов за короткое время. Пожалуйста, подождите — скоро доступ восстановится автоматически. Если вам нужна помощь, обратитесь в нашу тех. поддержку",
+  "pages.condo.error.TooManyRequestsDescription": "Вы отправили очень много запросов за короткое время. Пожалуйста, подождите — скоро доступ восстановится автоматически. Если вам нужна помощь, обратитесь в нашу тех. поддержку.",
+  "pages.condo.error.resetTime": "Попробуйте войти повторно в {resetTime}",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
