fix(condo): DOMA-11123 change _app after review

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1769,9 +1769,9 @@
   "pages.condo.error.NotFoundDescription": "La página ha sido eliminada o nunca ha existido",
   "pages.condo.error.NotFoundTitle": "Página no encontrada",
   "pages.condo.error.PageTitle": "Mejorando servicio",
-  "pages.condo.error.TooManyRequestsTitle": "Tu mani regaña",
-  "pages.condo.error.TooManyRequestsDescription": "Tienes muchas solicitudes en un corto periodo de tiempo. Por favor Blanco - El acceso se restaurará automáticamente pronto. Si necesita ayuda, comuníquese con nuestro equipo de soporte.",
-  "pages.condo.error.resetTime": "Por favor, inicie sesión nuevamente en {resetTime}",
+  "pages.condo.error.TooManyRequestsTitle": "El acceso se restablecerá pronto",
+  "pages.condo.error.TooManyRequestsDescription": "Hay demasiadas solicitudes desde tu dirección IP, por lo que hemos restringido el acceso. Se restaurará automáticamente en {resetTime}. Por favor, espera.",
+  "pages.condo.error.TooManyRequestsErrorCode": "Si no se restablece el acceso, comuníquese con el soporte técnico e informe el código de error: 429.",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "No ha sido posible determinar el tipo de enlace. Quizás el enlace es incorrecto o no se ha copiado completamente.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Enlace de pago desconocido",
   "pages.condo.marketplace.bankAccountErrorMessage": "Error en el número de cuenta corriente",
