--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1769,9 +1769,9 @@
   "pages.condo.error.NotFoundDescription": "Страница удалена или её никогда не существовало",
   "pages.condo.error.NotFoundTitle": "Страница не найдена",
   "pages.condo.error.PageTitle": "Улучшаем сервис",
-  "pages.condo.error.TooManyRequestsTitle": "Слишком много запросов",
-  "pages.condo.error.TooManyRequestsDescription": "Вы отправили очень много запросов за короткое время. Пожалуйста, подождите — скоро доступ восстановится автоматически. Если вам нужна помощь, обратитесь в нашу тех. поддержку.",
-  "pages.condo.error.resetTime": "Попробуйте войти повторно в {resetTime}",
+  "pages.condo.error.TooManyRequestsTitle": "Скоро доступ восстановится",
+  "pages.condo.error.TooManyRequestsDescription": "С вашего IP-адреса поступает слишком много запросов, поэтому мы ограничили доступ. Он автоматически восстановится в {resetTime}. Пожалуйста, подождите.",
+  "pages.condo.error.TooManyRequestsErrorCode": "Если доступ не восстановится, обратитесь в техподдержку и сообщите код ошибки — 429.",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
