--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -380,6 +380,7 @@
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "The \"finish\" field can take values in the range from 1 to 31",
   "api.meter.meterReportingPeriod.INVALID_START": "The \"start\" field can take values in the range from 1 to 31",
+  "api.meter.meterReportingPeriod.INVALID_RESTRICTION_END_DAY": "The end of the restriction of taking readings can only take a value from 1 to 31",
   "api.meter.meterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Organization is required for create meter reading reporting period",
   "api.meter.meterReportingPeriod.PROPERTY_NOT_FOUND": "There is no such property in the organization",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Account number field is filled incorrectly",
