fix(condo): DOMA-11123 add 429 error (#5802)
* feat(condo): DOMA-0000 added error 429

* fix(condo): DOMA-11123 add time to 429 error

* fix(condo): DOMA-11123 update callcenter

* fix(condo): DOMA-11123 change _app after review

* fix(condo): DOMA-11123 date format correction

* fix(condo): DOMA-11123 render date in component 429 page

* fix(condo): DOMA-11123 last fix

---------

Co-authored-by: Alllex202 <alllex.202@gmail.com>

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1769,6 +1769,9 @@
   "pages.condo.error.NotFoundDescription": "Page removed or never existed",
   "pages.condo.error.NotFoundTitle": "Page not found",
   "pages.condo.error.PageTitle": "Improving service",
+  "pages.condo.error.TooManyRequestsTitle": "Access will be restored soon",
+  "pages.condo.error.TooManyRequestsDescription": "There are too many requests from your IP address, so we have restricted access. It will automatically be restored in {resetTime}. Please wait.",
+  "pages.condo.error.TooManyRequestsErrorCode": "If access is not restored, contact technical support and report the error code - 429.",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Can't detect payment link type. Maybe link was corrupted or copied partially.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Unknown payment link",
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
