fix(condo): DOMA-9722 fixed typography color
fix(condo): DOMA-9722 fixed border-radius

fix(condo): DOMA-9722 fixed styles for FormItem

chore(ui): DOMA-9722 deprecated PhoneInput

fix(ui): DOMA-9722 added CookieAgreement to /auth page

chore(ui): DOMA-9722 updated schema

fix(ui): DOMA-9722 fixed styles for Input.Phone

fix(condo): DOMA-9722 fixed error mapping

fix(condo): DOMA-9722 removed password creating when invite new organization employee

refactor(condo): DOMA-9722 refactored regex

fix(condo): DOMA-9722 fixed link in messages

feat(condo): DOMA-9722 added link to telegram bot

feat(condo): DOMA-9722 added links for resident app

fix(condo): DOMA-9722 fixed after review

fix(condo): DOMA-9722 fixed after review by sonar

fix(condo): DOMA-9722 updated condition

fix(condo): DOMA-9722 fixed styles

feat(condo): DOMA-9722 updated schema

feat(condo): DOMA-9722 removed sms after user registration

feat(condo): DOMA-9722 added redirects if no resident app. Fixed styles

feat(condo): DOMA-9722 added images and translations

feat(condo): DOMA-9722 updated layout with poster

feat(condo): DOMA-9722 added translation

feat(condo): DOMA-9722 added display of QR code. Refactored styles

fix(condo): DOMA-9722 fixed redirects to auth

feat(condo): DOMA-9722 remove credentials from messages

feat(condo): DOMA-9722 added redirects for auth pages

chore(condo): DOMA-9722 removed unused code

fix(condo): DOMA-9722 fixed imports

feat(condo): DOMA-9722 new auth pages

feat(condo): DOMA-9722 show errors in form via useMutationErrorHandler

chore(condo): DOMA-9722 removed todo

feat(condo): DOMA-9722 added errorMapping to AuthenticateOrRegisterUserWithTokenService

feat(condo): DOMA-9722 fixed error mapping for keystone errors (for backward compatibility)

feat(condo): DOMA-9722 add size for Space

refactor(condo): DOMA-9722 added types

fix(condo): DOMA-9722 fixed captcha when it disabled

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -264,7 +264,6 @@
   "TimeHasPassed": "Ha pasado {time}",
   "Title": "Título",
   "ToEmployeesEmail": "Enviar la incidencia por correo al proveedor",
-  "TooManyRequests": "Has creado demasiadas incidencias. Inténtalo más tarde.",
   "TooManyRowsInTable.message": "El valor máximo permitido es {value}",
   "TooManyRowsInTable.title": "Hay demasiadas filas en su tabla",
   "Transaction": "Transacción",
@@ -644,6 +643,8 @@
   "component.TicketWarningModal.Entity.property": "comunidades",
   "component.TicketWarningModal.Entity.status": "estados",
   "component.TicketWarningModal.Title": "Se han escogido más {ticketFilterRestriction} {selectedEntity}",
+  "component.authPoster.description": "Plataforma en línea para empresas de gestión",
+  "component.authPoster.title": "Reduzca costos, mejore los procesos y las relaciones con los residentes",
   "component.statscard.ExtraTitle": "Leer más",
   "component.statscard.periodtypes.Month": "mes",
   "component.statscard.periodtypes.Quarter": "trimestre",
@@ -1593,6 +1594,7 @@
   "pages.auth.ForgotPasswordDescription": "Puedes cambiar tu contraseña por motivos de seguridad o recuperarla si la has olvidado. Recibirás un correo electrónico con instrucciones sobre cómo recuperar la contraseña de su cuenta",
   "pages.auth.ForgotPasswordStartedDescription": "Has iniciado correctamente el proceso de recuperación. Normalmente lleva algún tiempo en enviar las instrucciones de recuperación al correo electrónico. Si no has recibido el email, por favor comprueba la carpeta de SPAM o repita el proceso después de un tiempo",
   "pages.auth.ForgotPasswordTitle": "Restablecer contraseña",
+  "pages.auth.IAmOrganizationRepresentative": "Soy representante de la organización",
   "pages.auth.IAmResident": "Soy vecino",
   "pages.auth.IHaveReadAndAcceptTheAgreement": "He leído y acepto el acuerdo",
   "pages.auth.IsNotImplementedYet": "Aún no implementado ...",
@@ -1600,18 +1602,16 @@
   "pages.auth.MainPage": "Volver a la página principal",
   "pages.auth.NameMustContain": "El nombre debe contener al menos una letra",
   "pages.auth.NameMustNotStartOrAnd": "El nombre no puede empezar ni terminar con un guión",
-  "pages.auth.PasswordIsTooShort": "La contraseña es demasiado corta",
+  "pages.auth.PasswordIsTooShort": "No menos de {min} caracteres",
   "pages.auth.PasswordWasChanged": "Se ha cambiado la contraseña",
   "pages.auth.PasswordWasChangedDescription": "Ya puedes utilizar la nueva contraseña para iniciar sesión",
   "pages.auth.PhoneIsAlreadyRegistered": "Este número de teléfono ya está registrado",
-  "pages.auth.PhoneIsNotRegistered": "El teléfono aún no está registrado",
   "pages.auth.PleaseConfirmYourPassword": "Vuelve a introducir su contraseña para confirmarla",
   "pages.auth.PleaseInputYourEmail": "Introduce tu correo electrónico",
   "pages.auth.PleaseInputYourName": "Introduce tu nombre",
   "pages.auth.PleaseInputYourPassword": "Introduce tu contraseña",
   "pages.auth.Register": "Registrarse",
   "pages.auth.Registered": "Registrado",
-  "pages.auth.RegistrationTitle": "Registración",
   "pages.auth.ResetTitle": "Recuperación de contraseña",
   "pages.auth.SecurityCheckFailed": "Ha fallado la comprobación de CAPTCHA",
   "pages.auth.ShouldAcceptAgreement": "Debes aceptar el acuerdo",
@@ -1619,34 +1619,29 @@
   "pages.auth.TooManyRequests": "Inténtalo de nuevo más tarde",
   "pages.auth.TwoPasswordDontMatch": "Las contraseñas introducidas no coinciden",
   "pages.auth.WeMustMakeSureThatYouAreHuman": "Tenemos que asegurarnos de que eres humano",
+  "pages.auth.Welcome": "Bienvenido a la plataforma Doma.ai",
   "pages.auth.WhatDoYouWantOthersToCallYou": "¿Cómo te llamarán los demás?",
   "pages.auth.WrongPhoneOrPassword": "Número de teléfono o contraseña incorrectos",
   "pages.auth.register.AllFieldsAreRequired": "Todos los campos son obligatorios",
-  "pages.auth.register.ChangePhoneNumber": "Cambiar número",
-  "pages.auth.register.CodeIsAvailable": "El código es válido",
-  "pages.auth.register.ConfirmActionExpiredError": "Teléfono no confirmado. Inicie de nuevo el registro",
   "pages.auth.register.PhoneConfirmTokenErrorLabel": "No ha sido cumplido",
   "pages.auth.register.PhoneConfirmTokenErrorMessage": "Puedes volver a iniciar la confirmación del número de teléfono",
-  "pages.auth.register.ResendSmsLabel": "Volver a enviar código SMS",
   "pages.auth.register.RestartPhoneConfirmLabel": "Volver a empezar",
-  "pages.auth.register.SMSBadFormat": "Formato incorrecto del código SMS",
-  "pages.auth.register.SMSCodeMismatchError": "El código SMS no coincide",
-  "pages.auth.register.SMSExpiredError": "Código SMS caducado (1 minuto). Haga clic en el botón ¨Enviar código SMS de nuevo¨",
-  "pages.auth.register.SMSMaxRetriesReachedError": "Se ha superado el número máximo de intentos. Empezar de nuevo",
   "pages.auth.register.error.smstimeout": "El próximo mensaje SMS se puede enviar en {timeRemain} de",
-  "pages.auth.register.field.ConfirmPassword": "Repite tu contraseña",
+  "pages.auth.register.fail": "No se pudo completar el registro. Por favor, inténtelo de nuevo.",
   "pages.auth.register.field.Email": "Correo electrónico",
   "pages.auth.register.field.Name": "Nombre completo",
   "pages.auth.register.field.Password": "Crea una contraseña",
   "pages.auth.register.field.Phone": "Número de teléfono",
-  "pages.auth.register.field.SmsCode": "Código SMS",
   "pages.auth.register.info.ConsentContent": "el consentimiento para procesar datos personales",
   "pages.auth.register.info.PersonalDataProcessingConsent": "Al hacer clic en el botón ¨Registrarse¨ acepta {termsOfUse}, {privacyPolicyLink} y da {consentLink}",
   "pages.auth.register.info.PrivacyPolicyContent": "los términos de la política de privacidad",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "Este sitio está protegido mediante reCAPTCHA y está sujeto a la {PrivacyPolicy} y a los {TermsOfService} de Google",
-  "pages.auth.register.info.SmsCodeSent": "Mensaje enviado al número {phone}",
   "pages.auth.register.info.termsOfService": "servicio",
   "pages.auth.register.info.termsOfUseContent": "acuerdo de usuario",
+  "pages.auth.register.step.inputPhone.title": "Registración",
+  "pages.auth.register.step.register.title": "Registro",
+  "pages.auth.register.step.register.title.createPassword": "Crea una contraseña",
+  "pages.auth.register.step.validatePhone.title": "Código de verificación",
   "pages.auth.reset.AndSignInMsg": "e iniciar sesión en CRM",
   "pages.auth.reset.CheckEmail": "Comprueba tu correo",
   "pages.auth.reset.CheckPhone": "Comprueba SMS",
@@ -1656,9 +1651,23 @@
   "pages.auth.reset.ResetPasswordTitle": "Recuperar la contraseña",
   "pages.auth.reset.ResetSuccessMessage": "Se ha enviado un SMS al número {phone}. Sigue el enlace del SMS.",
   "pages.auth.reset.ReturnToLoginPage": "Volver al formulario de inicio de sesión",
-  "pages.auth.signin.ResetPasswordLink": "¿Has olvidado tu contraseña? {link}",
-  "pages.auth.signin.ResetPasswordLinkTitle": "Restablecer",
+  "pages.auth.resident.description": "Pague facturas, envíe lecturas de medidores y cree solicitudes para la compañía de gestión",
+  "pages.auth.resident.qrCode.info": "Apunta la cámara de tu teléfono al código QR o descarga la aplicación desde el {link}",
+  "pages.auth.resident.qrCode.info.link.dative": "enlace",
+  "pages.auth.resident.title": "Aplicación móvil del residente",
+  "pages.auth.signin.ResetPasswordLink": "¿Has olvidado tu contraseña?",
   "pages.auth.signin.field.Password": "Contraseña",
+  "pages.auth.signin.title": "Iniciar sesión",
+  "pages.auth.validatePhoneForm.codeIsAvailable": "El código es válido",
+  "pages.auth.validatePhoneForm.description.smsCodeSent": "Ingresa el código enviado al número {phone}",
+  "pages.auth.validatePhoneForm.problemsModal.checkPhone": "Verificar teléfono",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.checkPhone": "1. Verifique si hay un error en el teléfono.",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.supportTelegramChat": "2. Si todo es correcto, escriba al {chatBotLink} - le ayudaremos.",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.supportTelegramChat.chatInTelegram": "chat de soporte en Telegram",
+  "pages.auth.validatePhoneForm.problemsModal.title": "¿Por qué no recibo SMS?",
+  "pages.auth.validatePhoneForm.resendSms": "Volver a enviar código SMS",
+  "pages.auth.validatePhoneForm.smsCodeMismatchError": "El código SMS no coincide",
+  "pages.auth.validatePhoneForm.smsNotDelivered": "El SMS con el código no llega",
   "pages.banking.categoryModal.contractorsSelected": "Contratistas seleccionados",
   "pages.banking.categoryModal.transactionsSelected": "Transacciones seleccionadas",
   "pages.banking.categoryModal.transactionsWarning.description": "Todas las transacciones de esta contraparte ({count} pcs) se asignarán a la categoría seleccionada",
