--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -264,7 +264,6 @@
   "TimeHasPassed": "Прошло {time}",
   "Title": "Заголовок",
   "ToEmployeesEmail": "На почту сотруднику",
-  "TooManyRequests": "Слишком много запросов, пожалуйста, попробуйте позднее",
   "TooManyRowsInTable.message": "Максимально допустимое значение - {value}",
   "TooManyRowsInTable.title": "В вашей таблице слишком много строк",
   "Transaction": "Транзакция",
@@ -644,6 +643,8 @@
   "component.TicketWarningModal.Entity.property": "домов",
   "component.TicketWarningModal.Entity.status": "статусов",
   "component.TicketWarningModal.Title": "Выбрано больше {ticketFilterRestriction} {selectedEntity}",
+  "component.authPoster.description": "Онлайн-платформа для управляющих компаний, ТСН, ТСЖ, РСО",
+  "component.authPoster.title": "Сокращайте расходы, улучшайте процессы и отношения с жителями",
   "component.statscard.ExtraTitle": "Подробнее",
   "component.statscard.periodtypes.Month": "месяц",
   "component.statscard.periodtypes.Quarter": "квартал",
@@ -1593,60 +1594,54 @@
   "pages.auth.ForgotPasswordDescription": "Вы можете изменить свой пароль по соображениям безопасности или сбросить его, если вы его забыли. Вы получите электронное письмо с инструкциями по восстановлению пароля к вашей учетной записи",
   "pages.auth.ForgotPasswordStartedDescription": "Вы успешно запустили процесс восстановления. Обычно требуется некоторое время, чтобы доставить инструкции по восстановлению на электронную почту. Если вы не получили письмо, то проверьте папку СПАМ или повторите процесс через некоторое время",
   "pages.auth.ForgotPasswordTitle": "Сброс пароля",
-  "pages.auth.IAmResident": "Я — житель!",
+  "pages.auth.IAmOrganizationRepresentative": "Я — представитель бизнеса УК, ТСЖ, ТСН или РСО",
+  "pages.auth.IAmResident": "Я — житель",
   "pages.auth.IHaveReadAndAcceptTheAgreement": "Я прочитал и принимаю ваше соглашение",
   "pages.auth.IsNotImplementedYet": "Пока не реализовано ...",
   "pages.auth.LoggedIn": "Авторизован",
   "pages.auth.MainPage": "Вернуться на главную",
   "pages.auth.NameMustContain": "Имя должно содержать хотя бы одну букву",
   "pages.auth.NameMustNotStartOrAnd": "Имя не может начинаться или заканчиваться дефисом",
-  "pages.auth.PasswordIsTooShort": "Пароль слишком короткий",
+  "pages.auth.PasswordIsTooShort": "Не меньше {min} символов",
   "pages.auth.PasswordWasChanged": "Пароль изменен",
   "pages.auth.PasswordWasChangedDescription": "Вы уже можете использовать свой новый пароль для входа",
   "pages.auth.PhoneIsAlreadyRegistered": "Данный номер телефона уже зарегистрирован",
-  "pages.auth.PhoneIsNotRegistered": "Телефон еще не зарегистрирован",
   "pages.auth.PleaseConfirmYourPassword": "Введите пароль повторно для подтверждения",
   "pages.auth.PleaseInputYourEmail": "Введите Эл. почту",
   "pages.auth.PleaseInputYourName": "Введите имя",
   "pages.auth.PleaseInputYourPassword": "Введите пароль",
   "pages.auth.Register": "Зарегистрироваться",
   "pages.auth.Registered": "Зарегистрирован",
-  "pages.auth.RegistrationTitle": "Регистрация",
   "pages.auth.ResetTitle": "Восстановление пароля",
   "pages.auth.SecurityCheckFailed": "Вы не прошли проверку CAPTCHA",
   "pages.auth.ShouldAcceptAgreement": "Вам нужно принять соглашение",
-  "pages.auth.SignInTitle": "Вход",
+  "pages.auth.SignInTitle": "Войти",
   "pages.auth.TooManyRequests": "Повторите попытку позже",
   "pages.auth.TwoPasswordDontMatch": "Введенные вами пароли не совпадают",
   "pages.auth.WeMustMakeSureThatYouAreHuman": "Нам нужно убедиться, что вы человек",
+  "pages.auth.Welcome": "Добро пожаловать  на платформу Doma.ai",
   "pages.auth.WhatDoYouWantOthersToCallYou": "Как вас будут называть другие?",
   "pages.auth.WrongPhoneOrPassword": "Неверный номер телефона или пароль",
   "pages.auth.register.AllFieldsAreRequired": "Все поля обязательны для заполнения",
-  "pages.auth.register.ChangePhoneNumber": "Изменить номер",
-  "pages.auth.register.CodeIsAvailable": "Код действителен",
-  "pages.auth.register.ConfirmActionExpiredError": "Телефон не подтвержден. Начните регистрацию сначала",
   "pages.auth.register.PhoneConfirmTokenErrorLabel": "Не получилось",
   "pages.auth.register.PhoneConfirmTokenErrorMessage": "Вы можете инициировать подтверждение телефона ещё раз",
-  "pages.auth.register.ResendSmsLabel": "Отправить СМС-код ещё раз",
   "pages.auth.register.RestartPhoneConfirmLabel": "Начать сначала",
-  "pages.auth.register.SMSBadFormat": "Неправильный формат для СМС кода",
-  "pages.auth.register.SMSCodeMismatchError": "СМС код не совпадает",
-  "pages.auth.register.SMSExpiredError": "Время действия СМС-кода истекло (1 минута). Нажмите на кнопку «Отправить СМС-код ещё раз»",
-  "pages.auth.register.SMSMaxRetriesReachedError": "Максимальное количество попыток закончено. Начните сначала",
   "pages.auth.register.error.smstimeout": "Следующее СМС сообщение может быть отправлено через {timeRemain} с",
-  "pages.auth.register.field.ConfirmPassword": "Повторите пароль",
+  "pages.auth.register.fail": "Не удалось завершить регистрацию. Попробуйте еще раз",
   "pages.auth.register.field.Email": "Эл. почта",
   "pages.auth.register.field.Name": "ФИО",
   "pages.auth.register.field.Password": "Придумайте пароль",
   "pages.auth.register.field.Phone": "Телефон",
-  "pages.auth.register.field.SmsCode": "Код из СМС",
   "pages.auth.register.info.ConsentContent": "согласие на обработку персональных данных",
   "pages.auth.register.info.PersonalDataProcessingConsent": "Нажимая на кнопку «Зарегистрироваться», «Войти по СберБизнес ID» или «Войти», вы принимаете {termsOfUse}, {privacyPolicyLink} и даёте {consentLink}",
   "pages.auth.register.info.PrivacyPolicyContent": "условия политики конфиденциальности",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "Этот сайт под защитой системы reCAPTCHA и к нему применяются {PrivacyPolicy} и {TermsOfService} Google",
-  "pages.auth.register.info.SmsCodeSent": "Отправили SMS-код на номер {phone}",
   "pages.auth.register.info.termsOfService": "обслуживания",
   "pages.auth.register.info.termsOfUseContent": "пользовательское соглашение",
+  "pages.auth.register.step.inputPhone.title": "Зарегистрироваться",
+  "pages.auth.register.step.register.title": "Регистрация",
+  "pages.auth.register.step.register.title.createPassword": "Придумайте пароль",
+  "pages.auth.register.step.validatePhone.title": "Подтвердите номер",
   "pages.auth.reset.AndSignInMsg": "и войти в CRM",
   "pages.auth.reset.CheckEmail": "Проверьте почту",
   "pages.auth.reset.CheckPhone": "Проверьте СМС",
@@ -1656,9 +1651,23 @@
   "pages.auth.reset.ResetPasswordTitle": "Восстановить пароль",
   "pages.auth.reset.ResetSuccessMessage": "Отправили вам СМС на номер {phone}. Перейдите по ссылке в СМС.",
   "pages.auth.reset.ReturnToLoginPage": "Вернуться на форму входа",
-  "pages.auth.signin.ResetPasswordLink": "Забыли пароль? {link}",
-  "pages.auth.signin.ResetPasswordLinkTitle": "Сбросить",
+  "pages.auth.resident.description": "Оплачивайте квитанции, сдавайте показания счетчиков и отправляйте заявки в управляющую организацию",
+  "pages.auth.resident.qrCode.info": "Наведите камеру вашего телефона на QR-код или скачайте приложение по {link}",
+  "pages.auth.resident.qrCode.info.link.dative": "ссылке",
+  "pages.auth.resident.title": "Мобильное приложение жителя",
+  "pages.auth.signin.ResetPasswordLink": "Забыли пароль?",
   "pages.auth.signin.field.Password": "Пароль",
+  "pages.auth.signin.title": "Войти",
+  "pages.auth.validatePhoneForm.codeIsAvailable": "Код действителен",
+  "pages.auth.validatePhoneForm.description.smsCodeSent": "Введите код, отправленный на номер {phone}",
+  "pages.auth.validatePhoneForm.problemsModal.checkPhone": "Проверить номер",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.checkPhone": "1. Проверьте, нет ли ошибки в номере телефона.",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.supportTelegramChat": "2. Если все верно, напишите в {chatBotLink} — поможем.",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.supportTelegramChat.chatInTelegram": "чат поддержки в Telegram",
+  "pages.auth.validatePhoneForm.problemsModal.title": "Почему не приходит смс?",
+  "pages.auth.validatePhoneForm.resendSms": "Отправить СМС-код ещё раз",
+  "pages.auth.validatePhoneForm.smsCodeMismatchError": "СМС код не совпадает",
+  "pages.auth.validatePhoneForm.smsNotDelivered": "Не приходит СМС с кодом",
   "pages.banking.categoryModal.contractorsSelected": "Выбрано контрагентов",
   "pages.banking.categoryModal.transactionsSelected": "Выбрано транзакций",
   "pages.banking.categoryModal.transactionsWarning.description": "Всем транзакциям этого контрагента ({count} шт.) присвоится выбранная категория",
