--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -264,7 +264,6 @@
   "TimeHasPassed": "{time} have passed",
   "Title": "Title",
   "ToEmployeesEmail": "To employee's email",
-  "TooManyRequests": "Too many requests, please try again later",
   "TooManyRowsInTable.message": "Maximum amount is {value}",
   "TooManyRowsInTable.title": "Your table contains too many rows",
   "Transaction": "Transaction",
@@ -644,6 +643,8 @@
   "component.TicketWarningModal.Entity.property": "properties",
   "component.TicketWarningModal.Entity.status": "statuses",
   "component.TicketWarningModal.Title": "More than {ticketFilterRestriction} {selectedEntity} selected",
+  "component.authPoster.description": "Online platform for management companies",
+  "component.authPoster.title": "Reduce costs, improve processes and improve relationships with residents",
   "component.statscard.ExtraTitle": "More details",
   "component.statscard.periodtypes.Month": "month",
   "component.statscard.periodtypes.Quarter": "quarter",
@@ -1593,25 +1594,24 @@
   "pages.auth.ForgotPasswordDescription": "You can change your password for security reasons or reset it if you forget it. You will get an email with the steps to recover your account password",
   "pages.auth.ForgotPasswordStartedDescription": "You successfully started the recovery process. Usually, it takes some time to deliver recovery instructions email. If you don’t get an email: check your Spam folder",
   "pages.auth.ForgotPasswordTitle": "Reset password",
-  "pages.auth.IAmResident": "I'm resident!",
+  "pages.auth.IAmOrganizationRepresentative": "I am a representative of the organization",
+  "pages.auth.IAmResident": "I'm resident",
   "pages.auth.IHaveReadAndAcceptTheAgreement": "I have read and accept the agreement",
   "pages.auth.IsNotImplementedYet": "Is not implemented yet ...",
   "pages.auth.LoggedIn": "Logged in",
   "pages.auth.MainPage": "Main page",
   "pages.auth.NameMustContain": "The name must contain at least one letter",
   "pages.auth.NameMustNotStartOrAnd": "The name must not start or end with hyphen",
-  "pages.auth.PasswordIsTooShort": "The password is too short!",
+  "pages.auth.PasswordIsTooShort": "Not less than {min} characters",
   "pages.auth.PasswordWasChanged": "The password was changed",
   "pages.auth.PasswordWasChangedDescription": "You can use you new password to sign in",
   "pages.auth.PhoneIsAlreadyRegistered": "This phone is already registered!",
-  "pages.auth.PhoneIsNotRegistered": "This phone is not registered yet",
   "pages.auth.PleaseConfirmYourPassword": "Please confirm your password",
   "pages.auth.PleaseInputYourEmail": "Please input your Email",
   "pages.auth.PleaseInputYourName": "Please input your Name",
   "pages.auth.PleaseInputYourPassword": "Please input your Password",
   "pages.auth.Register": "Register",
   "pages.auth.Registered": "Registered",
-  "pages.auth.RegistrationTitle": "Registration",
   "pages.auth.ResetTitle": "Reset password",
   "pages.auth.SecurityCheckFailed": "Captcha check failed",
   "pages.auth.ShouldAcceptAgreement": "You should accept the agreement",
@@ -1619,34 +1619,29 @@
   "pages.auth.TooManyRequests": "Please, try later",
   "pages.auth.TwoPasswordDontMatch": "The two passwords that you entered do not match!",
   "pages.auth.WeMustMakeSureThatYouAreHuman": "We must make sure that your are a human",
+  "pages.auth.Welcome": "Welcome to the platform Doma.ai",
   "pages.auth.WhatDoYouWantOthersToCallYou": "What do you want others to call you?",
   "pages.auth.WrongPhoneOrPassword": "Wrong phone or password",
   "pages.auth.register.AllFieldsAreRequired": "All fields are required",
-  "pages.auth.register.ChangePhoneNumber": "Change phone number",
-  "pages.auth.register.CodeIsAvailable": "SMS is available",
-  "pages.auth.register.ConfirmActionExpiredError": "The phone is not confirmed. Try to start from the beginning",
   "pages.auth.register.PhoneConfirmTokenErrorLabel": "Attempt failed",
   "pages.auth.register.PhoneConfirmTokenErrorMessage": "You can initiate registration again",
-  "pages.auth.register.ResendSmsLabel": "Resend SMS",
   "pages.auth.register.RestartPhoneConfirmLabel": "Retry",
-  "pages.auth.register.SMSBadFormat": "Invalid SMS format",
-  "pages.auth.register.SMSCodeMismatchError": "SMS code mismatch",
-  "pages.auth.register.SMSExpiredError": "SMS time to live is expires",
-  "pages.auth.register.SMSMaxRetriesReachedError": "Maximum attempts count is exceeded. Try to start from the beginning",
   "pages.auth.register.error.smstimeout": "The next SMS can be sent in {timeRemain} s",
-  "pages.auth.register.field.ConfirmPassword": "Confirm your password",
+  "pages.auth.register.fail": "Failed to complete registration. Please try again",
   "pages.auth.register.field.Email": "Email",
   "pages.auth.register.field.Name": "Name",
   "pages.auth.register.field.Password": "Type new password",
   "pages.auth.register.field.Phone": "Phone",
-  "pages.auth.register.field.SmsCode": "Code from SMS",
   "pages.auth.register.info.ConsentContent": "consent",
   "pages.auth.register.info.PersonalDataProcessingConsent": "I give my {consentLink} to the Doma LLC for processing of my personal data and accept with {termsOfUse}. {privacyPolicyLink}",
   "pages.auth.register.info.PrivacyPolicyContent": "Privacy policy",
   "pages.auth.register.info.RecaptchaPrivacyPolicyContent": "This site is protected by reCAPTCHA and the Google {PrivacyPolicy} and {TermsOfService} apply.",
-  "pages.auth.register.info.SmsCodeSent": "Sent SMS on your phone number {phone}.",
   "pages.auth.register.info.termsOfService": "Terms of Service",
   "pages.auth.register.info.termsOfUseContent": "Terms of use",
+  "pages.auth.register.step.inputPhone.title": "Registration",
+  "pages.auth.register.step.register.title": "Registration",
+  "pages.auth.register.step.register.title.createPassword": "Create a password",
+  "pages.auth.register.step.validatePhone.title": "Verification code",
   "pages.auth.reset.AndSignInMsg": "and login to CRM",
   "pages.auth.reset.CheckEmail": "Check your mailbox",
   "pages.auth.reset.CheckPhone": "Check your SMS",
@@ -1656,9 +1651,23 @@
   "pages.auth.reset.ResetPasswordTitle": "Reset password",
   "pages.auth.reset.ResetSuccessMessage": "We sent you a message to {phone}. Read it and follow the instructions.",
   "pages.auth.reset.ReturnToLoginPage": "Back to signin page",
-  "pages.auth.signin.ResetPasswordLink": "Forgot password? {link}",
-  "pages.auth.signin.ResetPasswordLinkTitle": "Reset",
+  "pages.auth.resident.description": "Pay bills, submit meter readings and create tickets to the management company",
+  "pages.auth.resident.qrCode.info": "Point your phone's camera at the QR code or download the app from the {link}",
+  "pages.auth.resident.qrCode.info.link.dative": "link",
+  "pages.auth.resident.title": "Resident's mobile app",
+  "pages.auth.signin.ResetPasswordLink": "Forgot password?",
   "pages.auth.signin.field.Password": "Password",
+  "pages.auth.signin.title": "Sign in",
+  "pages.auth.validatePhoneForm.codeIsAvailable": "SMS is available",
+  "pages.auth.validatePhoneForm.description.smsCodeSent": "Enter the code sent to number {phone}",
+  "pages.auth.validatePhoneForm.problemsModal.checkPhone": "Check phone",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.checkPhone": "1. Check if there is an error in the phone.",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.supportTelegramChat": "2. If everything is correct, write to {chatBotLink} - we will help.",
+  "pages.auth.validatePhoneForm.problemsModal.instruction.steps.supportTelegramChat.chatInTelegram": "the support chat in Telegram",
+  "pages.auth.validatePhoneForm.problemsModal.title": "Why am I not receiving SMS?",
+  "pages.auth.validatePhoneForm.resendSms": "Resend SMS",
+  "pages.auth.validatePhoneForm.smsCodeMismatchError": "SMS code mismatch",
+  "pages.auth.validatePhoneForm.smsNotDelivered": "SMS with code does not arrive",
   "pages.banking.categoryModal.contractorsSelected": "Contractors selected",
   "pages.banking.categoryModal.transactionsSelected": "Transactions selected",
   "pages.banking.categoryModal.transactionsWarning.description": "All of the contractor transactions ({count} pcs.) will be updated with selected category",
