fix(condo): DOMA-11043 add multi select for properties on create meter reporting period page

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2128,7 +2128,8 @@
   "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Without restrictions",
   "pages.condo.meter.reportingPeriod.create.settings.periodType": "Allow to take readings",
   "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "When the period ends, residents will be able to take readings, but they will see a notification that they will be taken into account next month",
-  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "When the period ends, residents will be able to take readings, but they will see a notification that they will be taken into account next month",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "No readings will be accepted after the {notifyEndDay} date and until the end of the month. Residents will be able to turn them in from the 1st of next month",
+  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "With this setting, residents cannot transmit readings after the end of the period and before the beginning of the next month. You have specified a deadline that starts in one month and ends in the next, so you will not be able to set a limit.",
   "pages.condo.meter.reportingPeriod.create.settings.alert": "Residents will receive a notification about the time limit for taking readings",
   "pages.condo.meter.reportingPeriod.create.save.button": "Create period",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "This period will apply to all properties that do not have a period with a specific address",
