--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2128,7 +2128,8 @@
   "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Sin límites",
   "pages.condo.meter.reportingPeriod.create.settings.periodType": "Permitir lecturas de medidores",
   "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Cuando finalice el período, los residentes podrán tomar lecturas, pero verán un aviso de que se contabilizarán el próximo mes",
-  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Cuando finalice el período, los residentes podrán tomar lecturas, pero verán un aviso de que se contabilizarán el próximo mes",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Después del día {notifyEndDay} y hasta el final del mes, no se aceptarán lecturas. Los residentes podrán entregarlos a partir del 1 del próximo mes.",
+  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "Con esta configuración, los residentes no pueden transmitir lecturas después del final del período y hasta principios del próximo mes. Ha especificado un período de entrega que comienza en uno y termina en el próximo mes, por lo que no funcionará establecer un límite.",
   "pages.condo.meter.reportingPeriod.create.settings.alert": "Vecinos recibirán aviso para limitar plazo de entrega de medidores",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Este período será válido para todas las casas que no tengan un período con una dirección específica",
   "pages.condo.meter.reportingPeriod.create.save.button": "Crear período",
