--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2122,13 +2122,14 @@
   "pages.condo.meter.reportingPeriod.create.finish": "Конец периода",
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Конец периода должен быть больше начала периода",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "числа каждого месяца включительно",
-  "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Для всех домов",
+  "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Выбрать все дома",
   "pages.condo.meter.reportingPeriod.create.settings.title": "Настройка ограничений",
   "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "До окончания периода",
   "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Без ограничений",
   "pages.condo.meter.reportingPeriod.create.settings.periodType": "Разрешить сдавать показания",
   "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Когда период закончится, жители смогут сдавать показания, но увидят уведомление о том, что они будут учтены в следующем месяце",
-  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "Когда период закончится, жители смогут сдавать показания, но увидят уведомление о том, что они будут учтены в следующем месяце",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "После {notifyEndDay} числа и до конца месяца показания не будут приниматься. Жители смогут сдать их с 1 числа следующего месяца.",
+  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "С этой настройкой жители не могут передавать показания после окончания периода и до начала следующего месяца. Вы указали период сдачи, который начинается в одном, а заканчивается в следующем месяце, поэтому установить ограничение не получится.",
   "pages.condo.meter.reportingPeriod.create.settings.alert": "Жители получат уведомление об ограничении сроков сдачи показаний",
   "pages.condo.meter.reportingPeriod.create.save.button": "Создать период",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Этот период будет действовать для всех домов, у которых нет периода с определенным адресом",
