--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -482,11 +482,11 @@
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "You cannot specify different emails",
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "You cannot specify different phones",
   "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Invalid token",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Operation failed",
   "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Please fill in the required fields",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "To be able to log in with your phone number, you must log in to your account using a verified email",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "To be able to log in with your email, you must log in to your account using a verified phone number",
   "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Invalid token",
-  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Operation failed",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Wrong phone or password",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Unable to find non-expired ConfirmPhoneAction by specified token",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Unable to find user with specified phone",
@@ -1508,6 +1508,7 @@
   "notification.messages.MOBILE_APP_UPDATE_AVAILABLE_MESSAGE_PUSH.push.title": "It's time to update 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.PASS_TICKET_CREATED.telegram.openPassTicket": "Open pass",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Autopayment error 🚨",
@@ -1780,9 +1781,9 @@
   "pages.condo.error.NotFoundDescription": "Page removed or never existed",
   "pages.condo.error.NotFoundTitle": "Page not found",
   "pages.condo.error.PageTitle": "Improving service",
-  "pages.condo.error.TooManyRequestsTitle": "Access will be restored soon",
   "pages.condo.error.TooManyRequestsDescription": "There are too many requests from your IP address, so we have restricted access. It will automatically be restored in {resetTime}. Please wait.",
   "pages.condo.error.TooManyRequestsErrorCode": "If access is not restored, contact technical support and report the error code - 429.",
+  "pages.condo.error.TooManyRequestsTitle": "Access will be restored soon",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Can't detect payment link type. Maybe link was corrupted or copied partially.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Unknown payment link",
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
