--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -482,11 +482,11 @@
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_EMAILS": "Вы не можете указать разные электронные почты",
   "api.user.authenticateOrRegisterUserWithToken.DIFFERENT_PHONES": "Вы не можете указать разные номера телефонов",
   "api.user.authenticateOrRegisterUserWithToken.INVALID_TOKEN": "Недействительный токен",
+  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Не удалось выполнить операцию",
   "api.user.authenticateOrRegisterUserWithToken.REQUIRED_USER_DATA_IS_MISSING": "Пожалуйста, заполните обязательные поля",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_EMAIL": "Чтобы иметь возможность войти по номеру телефона, вам необходимо войти в свою учетную запись, используя подтвержденный адрес электронной почты",
   "api.user.authenticateOrRegisterUserWithToken.SHOULD_AUTHORIZE_WITH_PHONE": "Чтобы иметь возможность войти по почте, вам необходимо войти в свою учетную запись, используя подтвержденный номер телефона",
   "api.user.authenticateOrRegisterUserWithToken.UNSUPPORTED_TOKEN": "Недействительный токен",
-  "api.user.authenticateOrRegisterUserWithToken.OPERATION_FAILED": "Не удалось выполнить операцию",
   "api.user.authenticateUserWithPhoneAndPassword.WRONG_CREDENTIALS": "Неверный телефон или пароль",
   "api.user.changePasswordWithToken.TOKEN_NOT_FOUND": "Не найден действительный токен на изменение пароля",
   "api.user.changePasswordWithToken.USER_NOT_FOUND": "Не удалось найти пользователя с указанным телефоном",
@@ -1508,6 +1508,7 @@
   "notification.messages.MOBILE_APP_UPDATE_AVAILABLE_MESSAGE_PUSH.push.title": "Пора обновиться 😉",
   "notification.messages.NEWS_ITEM_COMMON_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
+  "notification.messages.PASS_TICKET_CREATED.telegram.openPassTicket": "Открыть пропуска",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_ACQUIRING_PAYMENT_PROCEED_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CAN_NOT_REGISTER_MULTI_PAYMENT_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
   "notification.messages.RECURRENT_PAYMENT_PROCEEDING_CARD_TOKEN_NOT_VALID_ERROR_MESSAGE.push.title": "Автоплатеж не прошел 🚨",
@@ -1780,9 +1781,9 @@
   "pages.condo.error.NotFoundDescription": "Страница удалена или её никогда не существовало",
   "pages.condo.error.NotFoundTitle": "Страница не найдена",
   "pages.condo.error.PageTitle": "Улучшаем сервис",
-  "pages.condo.error.TooManyRequestsTitle": "Скоро доступ восстановится",
   "pages.condo.error.TooManyRequestsDescription": "С вашего IP-адреса поступает слишком много запросов, поэтому мы ограничили доступ. Он автоматически восстановится в {resetTime}. Пожалуйста, подождите.",
   "pages.condo.error.TooManyRequestsErrorCode": "Если доступ не восстановится, обратитесь в техподдержку и сообщите код ошибки — 429.",
+  "pages.condo.error.TooManyRequestsTitle": "Скоро доступ восстановится",
   "pages.condo.error.paymentLinkHandler.NotFoundDescription": "Не удалось определить тип ссылки. Возможно ссылка неверная или скопирована не полностью.",
   "pages.condo.error.paymentLinkHandler.NotFoundTitle": "Неизвестная ссылка на оплату",
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
