--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -294,6 +294,8 @@
   "accrualsAndPayments.onBoardingModal.title": "About the section",
   "accrualsAndPayments.payments.noPaymentsYet.message": "Residents have not yet paid any receipts. As soon as this happens, the transaction information will appear here.",
   "accrualsAndPayments.payments.noPaymentsYet.title": "No payments yet",
+  "accrualsAndPayments.payments.type.list": "List",
+  "accrualsAndPayments.payments.type.registry": "Registries",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Selecting a billing",
   "accrualsAndPayments.setup.noReturn": "At this point it is impossible to go back to this step",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Acceptance of the offer",
